[package]
authors = ["David Schmitt <david@black.co.at>"]
description = "egads! The Easy Google API Discovery Service tool"
documentation = "https://github.com/DavidS/egads"
edition = "2021"
homepage = "https://github.com/DavidS/egads"
license = "Apache-2.0"
name = "egads"
readme = "README.md"
repository = "https://github.com/DavidS/egads"
version = "0.9.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "^0.11"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
tokio = {version = "^1.18", features = ["full"]}

[dev-dependencies]
clap = {version = "^3.1", features = ["derive"]}
