[package]
authors = ["David Schmitt <david@black.co.at>"]
description = "egads! The Easy Google API Discovery Service tool"
edition = "2021"
homepage = "https://github.com/DavidS/egads"
license = "Apache-2.0"
name = "egads"
readme = "README.md"
repository = "https://github.com/DavidS/egads"
version = "0.10.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "^0.11"
reqwest-middleware = "^0.1"
reqwest-retry = "^0.1"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
thiserror = "1.0.31"

[dev-dependencies]
clap = {version = "^3.1", features = ["derive"]}
tokio = {version = "^1.18", features = ["full"]}
