[package]
authors = ["David Schmitt <david@black.co.at>"]
description = "egads! The Easy Google API Discovery Service tool"
edition = "2021"
homepage = "https://github.com/DavidS/egads"
license = "Apache-2.0"
name = "egads"
readme = "README.md"
repository = "https://github.com/DavidS/egads"
version = "0.10.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
opentelemetry_api = "0.1.0"
reqwest = "^0.11"
reqwest-middleware = "^0.1"
reqwest-retry = "^0.1"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
thiserror = "1.0.31"
tonic = "0.6"
# tonic = "0.7"
tracing = {version = "0.1.35", features = ["attributes", "max_level_debug", "release_max_level_info"]}

[dev-dependencies]
clap = {version = "^3.1", features = ["derive"]}
opentelemetry = {version = "0.17.0", features = ["rt-tokio"]}
opentelemetry-otlp = {version = "0.10.0"}
tokio = {version = "^1.18", features = ["full"]}
tracing-opentelemetry = {version = "0.17.4", optional = false}
tracing-subscriber = "0.3.14"

[features]
tracing = [] # ["dep:tracing", "dep:tracing-opentelemetry"]

# [patch.crates-io]
# opentelemetry-otlp = {path = "../opentelemetry-rust/opentelemetry-otlp/"}
